--- a/app/src/main/res/layout/questionform_activity.xml
+++ b/app/src/main/res/layout/questionform_activity.xml
@@ -108,9 +108,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="60dp"
-        android:background="@drawable/custom_button"
+        android:background="@android:color/holo_red_dark"
         android:text="SEND!"
-        android:textColor="#CC0033"
+        android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
