--- a/app/src/main/res/layout/activity_informatica_page.xml
+++ b/app/src/main/res/layout/activity_informatica_page.xml
@@ -43,13 +43,14 @@
         android:text="Software can be found all around us. You are the specialist in creating large and complex software information systems that work quickly, efficiently and securely. You can think of developing a functional app, but also analyzing large amounts of data from social media. When developing these systems you come into contact with languages. In the first year you learn how to program in Python and  Java / C #. From the second year on, you choose which language you want to use. In addition to programming and developing various applications, you also learn to collaborate."
         android:textColor="#FFFFFF" />
 
-    <TextView
-        android:id="@+id/textView10"
+    <Button
+        android:id="@+id/ButtonOpenday"
         android:layout_width="289dp"
         android:layout_height="63dp"
         android:layout_below="@+id/lijn7"
         android:layout_marginTop="14dp"
         android:layout_centerHorizontal="true"
+        android:background="#CC0033"
         android:text="Upcoming openday:                                                  04/04/2019"
         android:textColor="#FFFFFF"
         android:textSize="20sp" />
@@ -97,7 +98,7 @@
         android:layout_width="315dp"
 
         android:layout_height="3dp"
-        android:layout_below="@+id/textView10"
+        android:layout_below="@+id/ButtonOpenday"
         android:background="@android:color/white"
         ></View>
 
