All hardcoded strings are done. I changed the dp errors to sp

--- a/app/src/main/res/layout/studies.xml
+++ b/app/src/main/res/layout/studies.xml
@@ -29,7 +29,7 @@
                 android:layout_height="70dp"
                 android:layout_marginEnd="28dp"
                 android:layout_marginRight="28dp"
-                android:text="As a technical computer scientist you work on modern IT systems in which hardware and software are integrated. Thanks to programming and hardware knowledge, you can operate at the intersection thereof."
+                android:text="@string/Informatica_studies"
                 android:textColor="#FFFFFF"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -42,7 +42,7 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="89dp"
                 android:layout_marginRight="89dp"
-                android:text="We train you to be a software engineer. You get started with the development of software for various applications. You are able to analyze design and implement complex IT systems"
+                android:text="@string/Tech_inf_studies"
                 android:textColor="#FFFFFF"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -55,7 +55,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="219dp"
                 android:layout_marginRight="219dp"
-                android:text="Communication"
+                android:text="@string/Communication"
                 android:textColor="#FFFFFF"
                 android:textSize="20sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -70,7 +70,7 @@
                 android:layout_marginTop="12dp"
                 android:layout_marginEnd="243dp"
                 android:layout_marginRight="243dp"
-                android:text="Informatica"
+                android:text="@string/Informatica"
                 android:textColor="#FFFFFF"
                 android:textSize="20sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -94,7 +94,7 @@
                 android:layout_height="76dp"
                 android:layout_marginEnd="28dp"
                 android:layout_marginRight="28dp"
-                android:text="Do you have a keen eye and ear for the stories op people and brands? Are you creative with text and image and facinated by the world of media? Then the communication course is for you!"
+                android:text="@string/Communication_studies"
                 android:textColor="#FFFFFF"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -110,7 +110,7 @@
                 android:layout_marginEnd="134dp"
                 android:layout_marginRight="134dp"
                 android:background="#CC0033"
-                android:text="Technische informatica"
+                android:text="@string/Tech_Informatica_button"
                 android:textColor="#FFFFFF"
                 android:textSize="20sp"
                 app:layout_constraintEnd_toEndOf="parent"
