--- a/app/src/main/res/layout/communicatie2.xml
+++ b/app/src/main/res/layout/communicatie2.xml
@@ -31,10 +31,9 @@
                 android:layout_marginEnd="9dp"
                 android:layout_marginRight="9dp"
                 android:background="#7f0000"
-                android:text="School                20:00 - 21:00        All Floors
-        Tour                "
+                android:text="@string/School_tour_2"
                 android:textColor="#ffffff"
-                android:textSize="20dp"
+                android:textSize="20sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/whatPlainText" />
@@ -49,10 +48,9 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginRight="8dp"
                 android:background="#7f0000"
-                android:text="Director's          19:00 - 19:30       Base floor
-        Speech                                           Cafeteria"
+                android:text="@string/Directors_speech_2"
                 android:textColor="#ffffff"
-                android:textSize="20dp"
+                android:textSize="20sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/act3TextView" />
@@ -67,8 +65,7 @@
                 android:layout_marginEnd="9dp"
                 android:layout_marginRight="9dp"
                 android:background="#7f0000"
-                android:text="Exposition of    17:00 - 18:30        4th floor
-        Projects                                             WD4.202"
+                android:text="@string/Exposition_of_projects_2"
                 android:textColor="#ffffff"
                 android:textSize="20sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -95,15 +92,15 @@
 
             <TextView
                 android:id="@+id/infOpenDay"
-                android:layout_width="251dp"
-                android:layout_height="75dp"
+                android:layout_width="266dp"
+                android:layout_height="91dp"
                 android:layout_marginStart="87dp"
                 android:layout_marginLeft="87dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="73dp"
                 android:layout_marginRight="73dp"
                 android:gravity="center_horizontal"
-                android:text="Communication open day February 23th 2019"
+                android:text="@string/Communication_title_and_second_date"
                 android:textColor="#ffffff"
                 android:textSize="24sp"
                 android:textStyle="bold"
