--- a/app/src/main/res/layout/creativemgt1.xml
+++ b/app/src/main/res/layout/creativemgt1.xml
@@ -31,10 +31,9 @@
                 android:layout_marginEnd="9dp"
                 android:layout_marginRight="9dp"
                 android:background="#7f0000"
-                android:text="School                20:00 - 21:00        All Floors
-        Tour                "
+                android:text="@string/School_tour_1"
                 android:textColor="#ffffff"
-                android:textSize="20dp"
+                android:textSize="20sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/whatPlainText" />
@@ -49,10 +48,9 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginRight="8dp"
                 android:background="#7f0000"
-                android:text="Director's          19:00 - 19:30       Base floor
-        Speech                                           Cafeteria"
+                android:text="@string/Directors_speech_1"
                 android:textColor="#ffffff"
-                android:textSize="20dp"
+                android:textSize="20sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/act3TextView" />
@@ -67,8 +65,7 @@
                 android:layout_marginEnd="9dp"
                 android:layout_marginRight="9dp"
                 android:background="#7f0000"
-                android:text="Exposition of    17:00 - 18:30        4th floor
-        Projects                                             WD4.202"
+                android:text="@string/Exposition_of_projects_1"
                 android:textColor="#ffffff"
                 android:textSize="20sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -86,7 +83,7 @@
                 android:layout_marginRight="9dp"
                 android:ems="10"
                 android:inputType="textPersonName"
-                android:text="WHAT?             WHEN?             WHERE?"
+                android:text="@string/What_When_Where"
                 android:textSize="22sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -103,7 +100,7 @@
                 android:layout_marginEnd="73dp"
                 android:layout_marginRight="73dp"
                 android:gravity="center_horizontal"
-                android:text="Creative Media and Game Technologies open day December 3th, 2018"
+                android:text="@string/Game_tech_title_and_first_date"
                 android:textColor="#ffffff"
                 android:textSize="24sp"
                 android:textStyle="bold"
