--- a/app/src/main/res/layout/openings_hours.xml
+++ b/app/src/main/res/layout/openings_hours.xml
@@ -37,48 +37,48 @@
             android:layout_width="match_parent"
             android:layout_height="47dp"
             android:background="#B9FFFFFF"
-            android:textSize="16sp"
-            android:text="                               Wijnhaven 99-103         Wijnhaven 107" />
+            android:text="@string/Opening_location"
+            android:textSize="16sp" />
 
         <TextView
             android:id="@+id/textView13"
             android:layout_width="match_parent"
             android:layout_height="44dp"
             android:background="#F2FFFFFF"
-            android:textSize="17sp"
-            android:text="  Monday                 07:30 - 19:30             7:30 - 22:00" />
+            android:text="@string/monday"
+            android:textSize="17sp" />
 
         <TextView
             android:id="@+id/textView14"
             android:layout_width="match_parent"
             android:layout_height="44dp"
             android:background="#F2FFFFFF"
-            android:textSize="17sp"
-            android:text="  Tuesday                07:30 - 21:00             7:30 - 21:00" />
+            android:text="@string/tuesday"
+            android:textSize="17sp" />
 
         <TextView
             android:id="@+id/textView17"
             android:layout_width="match_parent"
             android:layout_height="44dp"
             android:background="#F2FFFFFF"
-            android:textSize="17sp"
-            android:text="  Wednesday          07:30 - 19:30             7:30 - 22:00" />
+            android:text="@string/wednesday"
+            android:textSize="17sp" />
 
         <TextView
             android:id="@+id/textView16"
             android:layout_width="match_parent"
             android:layout_height="44dp"
             android:background="#F2FFFFFF"
-            android:textSize="17sp"
-            android:text="  Thursday              07:30 - 19:30             7:30 - 19:30" />
+            android:text="@string/thursday"
+            android:textSize="17sp" />
 
         <TextView
             android:id="@+id/textView15"
             android:layout_width="match_parent"
             android:layout_height="44dp"
             android:background="#F2FFFFFF"
-            android:textSize="17sp"
-            android:text="  Friday                    07:30 - 17:30             7:30 - 17:30" />
+            android:text="@string/friday"
+            android:textSize="17sp" />
 
     </LinearLayout>
 
