--- a/app/src/main/res/layout/questionform_activity.xml
+++ b/app/src/main/res/layout/questionform_activity.xml
@@ -108,7 +108,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="60dp"
-        android:background="@android:color/holo_red_dark"
+        android:background="@drawable/custom_button_contact"
         android:text="SEND!"
         android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
