--- a/app/src/main/res/layout/questionform_activity.xml
+++ b/app/src/main/res/layout/questionform_activity.xml
@@ -20,101 +20,89 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <TextView
-                android:id="@+id/textView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginBottom="28dp"
-                android:gravity="center_horizontal"
-                android:text="@string/Question_form"
-                android:textColor="#CC0033"
-                android:textSize="30sp"
-                app:layout_constraintBottom_toTopOf="@+id/nameEdit"
-                app:layout_constraintStart_toStartOf="@+id/nameEdit"
-                app:layout_constraintTop_toTopOf="parent" />
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="28dp"
+        android:gravity="center_horizontal"
+        android:text="Question form"
+        android:textColor="#CC0033"
+        android:textSize="30dp"
+        app:layout_constraintBottom_toTopOf="@+id/nameEdit"
+        app:layout_constraintStart_toStartOf="@+id/nameEdit"
+        app:layout_constraintTop_toTopOf="parent" />
 
-            <EditText
-                android:id="@+id/nameEdit"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="45dp"
-                android:backgroundTint="@color/colorPrimaryDark"
-                android:ems="10"
-                android:hint="@string/Name"
-                android:inputType="textPersonName"
-                android:textColor="#CC0033"
-                android:textColorHint="#CC0033"
-                app:layout_constraintBottom_toTopOf="@+id/phoneEdit"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView" />
+    <EditText
+        android:id="@+id/nameEdit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="45dp"
+        android:backgroundTint="@color/colorPrimaryDark"
+        android:ems="10"
+        android:hint="Name"
+        android:inputType="textPersonName"
+        android:textColorHint="#CC0033"
+        android:textColor="#CC0033"
+        app:layout_constraintBottom_toTopOf="@+id/phoneEdit"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
-            <EditText
-                android:id="@+id/emailEdit"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="43dp"
-                android:backgroundTint="@color/colorPrimaryDark"
-                android:ems="10"
-                android:hint="@string/Email"
-                android:inputType="textEmailAddress"
-                android:textColor="#CC0033"
-                android:textColorHint="#CC0033"
-                app:layout_constraintBottom_toTopOf="@+id/questionEdit"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/phoneEdit" />
+    <EditText
+        android:id="@+id/emailEdit"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="43dp"
+        android:backgroundTint="@color/colorPrimaryDark"
+        android:ems="10"
+        android:inputType="textEmailAddress"
+        android:hint="E-mail"
+        android:textColorHint="#CC0033"
+        android:textColor="#CC0033"
+        app:layout_constraintBottom_toTopOf="@+id/questionEdit"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/phoneEdit" />
 
-            <EditText
-                android:id="@+id/phoneEdit"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="35dp"
-                android:backgroundTint="@color/colorPrimaryDark"
-                android:ems="10"
-                android:hint="@string/subject"
-                android:inputType="text"
-                android:textColor="#CC0033"
-                android:textColorHint="#CC0033"
-                app:layout_constraintBottom_toTopOf="@+id/emailEdit"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/nameEdit" />
+    <EditText
+        android:id="@+id/phoneEdit"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="35dp"
+        android:backgroundTint="@color/colorPrimaryDark"
+        android:ems="10"
+        android:inputType="text"
+        android:hint="Subject"
+        android:textColorHint="#CC0033"
+        android:textColor="#CC0033"
+        app:layout_constraintBottom_toTopOf="@+id/emailEdit"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/nameEdit" />
 
-            <EditText
-                android:id="@+id/questionEdit"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_marginBottom="56dp"
-                android:backgroundTint="@color/colorPrimaryDark"
-                android:breakStrategy="balanced"
-                android:ems="10"
-                android:fitsSystemWindows="true"
-                android:hint="@string/Type_question"
-                android:inputType="textMultiLine"
-                android:textColor="#CC0033"
-                android:textColorHint="#CC0033"
-                app:layout_constraintBottom_toTopOf="@+id/sendButton"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/emailEdit" />
+    <EditText
+        android:id="@+id/questionEdit"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="56dp"
+        android:backgroundTint="@color/colorPrimaryDark"
+        android:breakStrategy="balanced"
+        android:textColor="#CC0033"
+        android:ems="10"
+        android:fitsSystemWindows="true"
+        android:hint="Type your question here"
+        android:inputType="textMultiLine"
+        android:textColorHint="#CC0033"
+        app:layout_constraintBottom_toTopOf="@+id/sendButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/emailEdit" />
 
-            <Button
-                android:id="@+id/sendButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="60dp"
-                android:background="@drawable/custom_button"
-                android:text="@string/Send_button"
-                android:textColor="#CC0033"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.498"
-                app:layout_constraintStart_toStartOf="parent" />
     <Button
         android:id="@+id/sendButton"
         android:layout_width="wrap_content"
